# src/cmd/generated-code/openapi_types.gen.go
@@ -1,10 +1,12 @@
-// Package generated provides primitives to interact with the openapi HTTP API.
+// Package swagger provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
-package generated
+package swagger
 
 import (
 	"time"
+
+	openapi_types "github.com/oapi-codegen/runtime/types"
 )
 
 const (
@@ -21,9 +23,16 @@ const (
 
 // Defines values for ExpenseCategory.
 const (
+	DEFAULT        ExpenseCategory = "DEFAULT"
 	ENTERTAINMENT  ExpenseCategory = "ENTERTAINMENT"
 	FOOD           ExpenseCategory = "FOOD"
 	TRANSPORTATION ExpenseCategory = "TRANSPORTATION"
+)
+
+// Defines values for ExpenseScreenRequestBodyDivisionType.
+const (
+	EQUALY    ExpenseScreenRequestBodyDivisionType = "EQUALY"
+	SETVALUES ExpenseScreenRequestBodyDivisionType = "SET_VALUES"
 )
 
 // ActivitiesScreenActivities defines model for ActivitiesScreenActivities.
@@ -80,19 +89,23 @@ type ExpenseCommentRequestBody struct {
 
 // ExpenseScreenRequestBody defines model for ExpenseScreenRequestBody.
 type ExpenseScreenRequestBody struct {
-	Category     *ExpenseCategory `json:"category,omitempty"`
-	Description  *string          `json:"description,omitempty"`
-	Name         string           `json:"name"`
+	Avatar       *string                              `json:"avatar,omitempty"`
+	Category     ExpenseCategory                      `json:"category"`
+	Date         *openapi_types.Date                  `json:"date,omitempty"`
+	Description  *string                              `json:"description,omitempty"`
+	DivisionType ExpenseScreenRequestBodyDivisionType `json:"divisionType"`
+	GroupId      *string                              `json:"groupId,omitempty"`
+	Name         string                               `json:"name"`
 	Participants []struct {
-		UserId *string `json:"userId,omitempty"`
-		Value  *string `json:"value,omitempty"`
+		UserId *string  `json:"userId,omitempty"`
+		Value  *float32 `json:"value,omitempty"`
 	} `json:"participants"`
-	Payers []struct {
-		UserId *string `json:"userId,omitempty"`
-		Value  *string `json:"value,omitempty"`
-	} `json:"payers"`
+	Payer string  `json:"payer"`
 	Value float32 `json:"value"`
 }
+
+// ExpenseScreenRequestBodyDivisionType defines model for ExpenseScreenRequestBody.DivisionType.
+type ExpenseScreenRequestBodyDivisionType string
 
 // GroupDetailsScreenBalance defines model for GroupDetailsScreenBalance.
 type GroupDetailsScreenBalance struct {
