# src/internal/infra/repository/model.go
@@ -12,8 +12,8 @@ type User struct {
 	email     string
 	pixKey    string
 	createdAt time.Time
-	updatedAt sql.NullTime
-	deletedAt sql.NullTime
+	updatedAt *time.Time
+	deletedAt *time.Time
 }
 
 type GroupParticipant struct {
@@ -22,7 +22,7 @@ type GroupParticipant struct {
 	groupId       string
 	isAdmin       bool
 	admissionDate time.Time
-	removedAt     sql.NullTime
+	removedAt     *time.Time
 }
 
 type GroupSolicitation struct {
@@ -38,42 +38,43 @@ type Group struct {
 	avatar     string
 	accessCode sql.NullString
 	createdBy  string
-	createdAt  time.Time
-	updatedAt  sql.NullTime
-	deletedAt  sql.NullTime
+	createdAt  *time.Time
+	updatedAt  *time.Time
+	deletedAt  *time.Time
 }
 
 type ExpensePaymentSplit struct {
-	id              big.Int
-	userId          string
-	expenseId       string
-	value           big.Float
-	transactionType string
-	createdAt       time.Time
-	isDebtSettled   bool
+	Id            big.Int
+	UserId        string
+	ExpenseId     string
+	Value         float32
+	CreatedAt     *time.Time
+	IsDebtSettled bool
 }
+
+type TransactionType string
 
 type ExpenseCommentary struct {
 	id         big.Int
 	userId     string
 	expenseId  string
 	commentary string
-	createdAt  time.Time
-	updatedAt  sql.NullTime
-	deletedAt  sql.NullTime
+	createdAt  *time.Time
+	updatedAt  *time.Time
+	deletedAt  *time.Time
 }
 
 type Expense struct {
-	id          big.Int
-	groupId     string
-	title       string
-	description string
-	category    string
-	avatar      string
-	value       big.Float
-	expenseDate time.Time
-	createdBy   string
-	createdAt   time.Time
-	updatedAt   sql.NullTime
-	deletedAt   sql.NullTime
+	Id          big.Int
+	GroupId     *string
+	Title       string
+	Description *string
+	Category    string
+	Avatar      *string
+	Value       float32
+	ExpenseDate time.Time
+	CreatedBy   string
+	CreatedAt   *time.Time
+	UpdatedAt   *time.Time
+	DeletedAt   *time.Time
 }
